--- a/SearchReloader/SearchReloader.csproj
+++ b/SearchReloader/SearchReloader.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="View\SearchLikes.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
